Limit gui thread pool to 8 threads

Avoid having too many threads, since iOS punishes us if we overstep 64,
and we don't really need more than 8 on any platform.

Fixes: QTBUG-128290
Pick-to: 6.5
Change-Id: I59a233d422e9b1b2097a777e0b1b626e144594d9
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
(cherry picked from commit 80f210db3e43c50e252504f41ed3fbd8b2992028)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 5c2796a07955f430f14382a8ace30791a2847a04)